hphp/hack/test/typecheck/construct/private_props_abs_without_construct2.php
<?hh // strict

class C {}

abstract class A1 {
  protected C $c; // responsibility of subclasses

  abstract protected function __construct();
}

abstract class A2 {
  private C $c;

  abstract protected function __construct();
}
